--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,28 @@
   <link rel="manifest" href="manifest.json">
   
   
-  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   
   
   
@@ -44,9 +65,8 @@
     body {
       margin: 0;
       min-height: 100%;
-      background-color: #000000;
-      background-image: url("splash/img/light-background.png");
-      background-size: 100% 100%;
+      background-color: #1E1E1E;
+          background-size: 100% 100%;
     }
 
     .center {
@@ -102,6 +122,7 @@
       document.body.style.background = "transparent";
     }
   </script>
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 </head>
 <body>
   <picture id="splash">
@@ -109,6 +130,14 @@
       <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x" media="(prefers-color-scheme: dark)">
       <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
   </picture>
+  
+  
+  
+  
+  
+  
+  
+  
   
   
   <script src="flutter_bootstrap.js" async=""></script>
